compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__module_lets__simple_value.snap
---
source: compiler-core/src/javascript/tests/module_lets.rs
expression: "\npub let x = 1\n"
---
----- SOURCE CODE

pub let x = 1


----- COMPILED JAVASCRIPT
export const x = 1;
